# xmris

./: .gitignore  LICENSE  README.md  clean_metadata.py  pyproject.toml
.github/workflows/: ci-fast.yml  ci-publish.yml  deploy.yml  deploy_docs.yml  tests.yml
.vsocde/: settings.json
docs/: index.md  myst.yml  quartodoc.yml
docs/01_notebooks/: 01_basics_fft.ipynb  01_basics_fft.py  01_tutorial_fft.ipynb  01_tutorial_fft.py  02_apodisation.ipynb  02_apodisation.py  02_fid_transformations.ipynb  02_fid_transformations.py  03_architecture_and_formatting.ipynb  03_architecture_and_formatting.py  03_fid_transformations.ipynb  03_fid_transformations.py  03_fid_zerofill.ipynb  03_fid_zerofill.py  04_fid_apodization.ipynb  04_fid_apodization.py  05_phase.ipynb  05_phase.py  06_bruker_digital_filter.ipynb  06_bruker_digital_filter.py  07_pyamares.ipynb  07_pyamares.py  08_pyamares_advanced.ipynb  08_pyamares_advanced.py  complex_numbers.ipynb  complex_numbers.py
docs/02_Contribute/: 01_contribute.md  02_setup.md  03_ai_context.md
docs/assets/: footer.md  references.bib
docs/contributing/: ai_context.md  guide.md  publishing.md  static_widgets.ipynb  static_widgets.md
docs/notebooks/: scroller.ipynb  scroller.md
docs/notebooks/basics/: architecture.ipynb  architecture.md  architecture.py  complex_numbers.ipynb  complex_numbers.md  complex_numbers.py  conventions.ipynb  conventions.py  fft.ipynb  fft.md  fft.py  fid_transformations.ipynb  fid_transformations.md  fid_transformations.py  hz_and_ppm.ipynb  hz_and_ppm.md
docs/notebooks/fitting/: pyamares.ipynb  pyamares.md  pyamares.py  pyamares_advanced.ipynb  pyamares_advanced.py  simufid.ipynb  simufid.md
docs/notebooks/pipeline/: apodization.ipynb  apodization.md  autophase.ipynb  autophase.md  autophasing.ipynb  autophasing.md  baseline.md  bruker_filter.ipynb  phase.ipynb  phase.md  zero_fill.ipynb  zero_fill.md
docs/notebooks/visualization/: 01_plotting_basics.ipynb  01_plotting_basics.py  02_plotting_heatmap.py  03_plotting_fit_1d.py
docs/notebooks/visualization/plot/: 01_plot_basics.md  02_plot_waterfall.md  02_plotting_heatmap.ipynb  03_plot_carpet.md  03_plotting_1dfid.md  03_plotting_fit_1d.md
docs/notebooks/visualization/widget/: 01_widget_phase.ipynb  01_widget_phase.md  02_widger_scroller.ipynb  02_widger_scroller.md  02_widget_scroller.md  03_apodization.md  prototype.md
src/xmris/: __init__.py  _scripts.py  accessor.py  apodization.py  config.py  fid.py  fitting.py  fourier.py  phase.py  signal.py  utils.py  zerofilling.py
src/xmris/core/: __init__.py  accessor.py  config.py  utils.py  validation.py
src/xmris/fitting/: __init__.py  amares.py
src/xmris/processing/: baseline.py  fid.py  fourier.py  phase.py  phasing.py  simulation.py  utils.py
src/xmris/visualization/: __init__.py
src/xmris/visualization/plot/: __init__.py  _base_config.py  _input_parsing.py  plot_carpet.py  plot_heatmap.py  plot_qc_grid.py  plot_ridge.py  plot_trajectory.py  plot_waterfall.py
src/xmris/visualization/widget/: __init__.py  _static_exporter.py
src/xmris/visualization/widget/apodizer/: apo_instro_part1.md  apo_instro_part2.md  apo_instro_part3.md  apo_instro_part4.md  apodizer.css  apodizer.js  apodizer.py
src/xmris/visualization/widget/phase/: phase.css  phase.js  phase.py
src/xmris/visualization/widget/scroller/: scroller.css  scroller.js  scroller.py
tests/: README.md  test_core.py
tests/data/nspect_slab_13C/: ground_truth.toml
tests/data/nspect_slab_1H/: ground_truth.toml  rawdatajob0.nc
