# ==============================================================================
# 1. PROJECT METADATA
# ==============================================================================
[project]
name = "xmris"
version = "0.1.0"
description = "An xarray-based MRI and MRS toolbox"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Andrecho", email = "37243793+andrewendlinger@users.noreply.github.com" }
]
dependencies = [
    "nmrglue>=0.11",
    "numpy>=2.2.0",      # Numpy 2.x is the standard in 2026
    "xarray>=2025.11.0", # Recent stable xarray
]

[project.scripts]
# Run 'uv run docs-api' to update Python API references
docs-api = "xmris._scripts:docs_api"

# Run 'uv run docs-notebooks' to work on tutorials/markdown
docs-notebooks = "xmris._scripts:docs_notebooks"

# Run 'uv run docs' to build everything from scratch
docs = "xmris._scripts:docs_all"

# ==============================================================================
# 2. BUILD SYSTEM
# ==============================================================================
[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

# ==============================================================================
# 3. DEVELOPMENT DEPENDENCIES
# ==============================================================================
[dependency-groups]
dev = [
    "ipympl>=0.10.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.0",
    "mypy>=1.15.0",
    "mystmd>=1.3.0",     # Docs: Python MyST CLI for docs building
    "nbmake>=1.5.5",     # Pytest: plugin to treat Jupyter notebooks as unit tests
    "pytest>=8.4.0",
    "griffe<0.40.0",     # temporary explicit import to fix the quartodoc parsing bug
    "quartodoc>=0.11.1", # Docs: converts code docstrings to markdown files for myst
    "ruff>=0.9.0",
]

# ==============================================================================
# 4. TOOL CONFIGURATIONS
# ==============================================================================

# --- Pytest & Nbmake ---
[tool.pytest.ini_options]
# Automatically append --nbmake so `uv run pytest` tests both .py and .ipynb files
addopts = "--nbmake"
# Explicitly state where pytest should look to speed up test discovery
testpaths = [
    "tests",          # Standard Python unit tests (assuming you create this folder)
    "docs/01_notebooks",   # Your Jupyter notebook tutorials
]

# --- Ruff (Linter & Formatter) ---
[tool.ruff]
line-length = 88
target-version = "py312"  # Ensure this matches your expected runtime target

[tool.ruff.lint]
# Select rules: Errors (E), Failures (F), isort (I), NumPy (NPY), Docstrings (D), pyupgrade (UP)
select = ["E", "F", "I", "NPY", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore "Line too long" (E501) in all notebook (scripts)
# Ignore any 'Unused import' usually due to 'import xmris' to activate the accessor
"docs/01_notebooks/*.py" = ["E501", "F401"]
"docs/01_notebooks/*.ipynb" = ["E501", "F401"]

# --- Jupytext ---
[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "all,-trusted"
