# ==============================================================================
# 1. PROJECT METADATA
# ==============================================================================
[project]
name = "xmris"
version = "0.1.0"
description = "An xarray-based MRI and MRS toolbox"
readme = "README.md"
requires-python = ">=3.11,<3.13"# TEMP FIX FOR PYAMARES
authors = [
    { name = "Andrecho", email = "37243793+andrewendlinger@users.noreply.github.com" }
]
dependencies = [
    "nmrglue>=0.11",
    "numpy>=1.26.0",
    "pyamares",
    "xarray<2025.11.0", # FIX-pyamares
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Repository = "https://github.com/Andrecho/xmris"
Documentation = "https://andrecho.github.io/xmris/"

[project.scripts]
# Run 'uv run docs-api' to update Python API references
docs-api = "xmris._scripts:docs_api"

# Run 'uv run docs-notebooks' to work on tutorials/markdown
docs-notebooks = "xmris._scripts:docs_notebooks"

# Run 'uv run docs' to build everything from scratch
docs = "xmris._scripts:docs_all"

# ==============================================================================
# 2. BUILD SYSTEM
# ==============================================================================
[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

# ==============================================================================
# 3. DEVELOPMENT DEPENDENCIES
# ==============================================================================
[dependency-groups]
dev = [
    "ipympl>=0.10.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.0",
    "mypy>=1.15.0",
    "mystmd>=1.3.0",     # Docs: Python MyST CLI for docs building
    "nbmake>=1.5.5",     # Pytest: plugin to treat Jupyter notebooks as unit tests
    "pytest>=8.4.0",
    "griffe<0.40.0",     # temporary explicit import to fix the quartodoc parsing bug
    "quartodoc>=0.11.1", # Docs: converts code docstrings to markdown files for myst
    "ruff>=0.9.0",
    "pytest-cov>=5.0.0,<7.0.0", # Pin below 7.0.0 to fix nbmake subprocess tracking,
    "pytest-xdist>=3.8.0",
]

# ==============================================================================
# 4. TOOL CONFIGURATIONS
# ==============================================================================

# --- Pytest & Nbmake ---
[tool.pytest.ini_options]
# Explanation of addopts:
# --nbmake: treat notebooks as tests
# --cov=xmris: track coverage specifically for your package source code
# --cov-report=term-missing: print coverage % in the terminal and list missing line numbers
# --cov-report=html: generate a clickable HTML report in a folder named `htmlcov`
# -n auto: use all available CPU cores to run tests in parallel
addopts = "--nbmake --cov=xmris --cov-report=term-missing --cov-report=html -n auto --cov-config=pyproject.toml"

testpaths = [
    "tests",
    "docs/01_notebooks",
]

# --- Ruff (Linter & Formatter) ---
[tool.ruff]
line-length = 90
target-version = "py312"  # Ensure this matches your expected runtime target

[tool.ruff.lint]
# Select rules: Errors (E), Failures (F), isort (I), NumPy (NPY), Docstrings (D), pyupgrade (UP)
select = ["E", "F", "I", "NPY", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignores the following for notebooks (.ipynb) and jupytext files (.py):
# - E501: "Line too long"
# - F401: "Unused import" (usually due to 'import xmris' to activate the accessor)
# - E402: "Import not at top of file / double import"
"docs/01_notebooks/*.py" = ["E501", "F401", "E402"]
"docs/01_notebooks/*.ipynb" = ["E501", "F401", "E402"]

# --- Jupytext ---
[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "all,-trusted"

[tool.uv.sources]
# Uncomment the local repository for simultaneous development of both packages
# (longterm a uv workspace might be better)
pyamares = { git = "https://github.com/andrewendlinger/pyAMARES", branch = "xmris-compatible" }
# pyamares = { path = "../pyAMARES", editable = true } # (local dependency development workflow)

# ==============================================================================
# 5. COVERAGE CONFIGURATION
# ==============================================================================
[tool.coverage.run]
# Tell coverage to look inside the src directory
source = ["xmris"]
disable_warnings = ["no-data-collected"]

omit = [
    "*/tests/*",
    "*/docs/*",
    "*/_scripts.py", # This wildcard will catch it anywhere
]

[tool.coverage.report]
# Automatically ignore lines that match these patterns
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",       # Ignore typing imports
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
